<package>
  <name>ecto_ros</name>
  <version>0.3.16</version>
  <description>A set of generic cells to interact with ROS</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <copyright>WIllow Garage</copyright>

  <url>http://ecto.willowgarage.com/recognition</url>
  <build_depend>catkin</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>ros_comm</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>common_msgs</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>ros_comm</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
